--- a/helm_charts/aws-proserve-java-greeting/values.dev.yaml
+++ b/helm_charts/aws-proserve-java-greeting/values.dev.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: xxxxxxxx.dkr.ecr.us-east-2.amazonaws.com/aws-proserve-java-docker
+  repository: 824813378441.dkr.ecr.us-east-1.amazonaws.com/backend
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
