--- a/buildspec/buildspec_secscan.yaml
+++ b/buildspec/buildspec_secscan.yaml
@@ -1,6 +1,6 @@
 version: 0.2
 phases:
-  install: # Install AWS cli, maven, aws-codeguru-cli, checkov
+  install: # Install AWS CLI, Maven, AWS CodeGuru CLI, Checkov
     runtime-versions:
       java: latest
     commands:
@@ -14,7 +14,7 @@ phases:
        - curl -sSL https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
        - helm repo add stable https://charts.helm.sh/stable && helm repo update
 
-  pre_build: # Check availability of Maven and it's version, capturing previous commit_id
+  pre_build: # Check availability of Maven and its version, capturing previous commit ID
     commands:
       - echo -e '\nMaven version:'
       - mvn --version
@@ -25,9 +25,9 @@ phases:
 
   build: # Static Code Analysis of Application
     commands:
-      - echo -e "\n Running Dockerfile Scan"
+      - echo -e "\nRunning Dockerfile Scan"
       - checkov -f code/app/Dockerfile --framework dockerfile --soft-fail --summary-position bottom
-      - echo -e "\n Running Scan of Helm Chart files"
+      - echo -e "\nRunning Scan of Helm Chart files"
       - cp -pv helm_charts/$EKS_CODEBUILD_APP_NAME/values.dev.yaml helm_charts/$EKS_CODEBUILD_APP_NAME/values.yaml
       - checkov -d helm_charts/$EKS_CODEBUILD_APP_NAME --framework helm --soft-fail --summary-position bottom
       - rm -rfv helm_charts/$EKS_CODEBUILD_APP_NAME/values.yaml
@@ -49,18 +49,3 @@ phases:
            echo -e "\nAnalysing incremental changes between $CURRENT_COMMIT and $PREVIOUS_COMMIT"
            $BASE/aws-codeguru-cli/bin/aws-codeguru-cli --region $AWS_REGION --bucket-name $CG_REVIEWER_BUCKET_NAME --root-dir $BASE --build $APP_BUILD_ARTIFACTS --src $SRC --commit-range $PREVIOUS_COMMIT:$CURRENT_COMMIT --output $OUTPUT --no-prompt
         fi
-  post_build: # Upload Security vulnerabilities found in docker image to AWS SecurityHub in ASFF format
-    commands:
-      - |
-        if [ -f ${CODEBUILD_SRC_DIR}/output/recommendations.json ]; then
-           cat ${CODEBUILD_SRC_DIR}/output/recommendations.json
-           CNT=$(cat ${CODEBUILD_SRC_DIR}/output/recommendations.json |jq '.[] | select(.severity=="Critical")|.severity' | wc -l)
-           if [ $CNT -gt 0 ]; then
-             echo -e "\nCritical Findings Discovered during Static Code Analysis. Failing"
-           else
-             echo -e "\nNo Critical Findings Encountered. Going Ahead with next stage for Build"
-           fi
-        else
-            echo -e "\nNo Recommendations from CodeGuru Reviewer as of now"
-        fi
-      - bash -c "if [ /"$CODEBUILD_BUILD_SUCCEEDING/" == /"0/" ]; then exit 1; fi"
